deployments/deployment-poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  namespace: api
  labels:
    app: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registrympx1704.azurecr.io/poi:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        volumeMounts:
          - name: secrets-store01-inline
            mountPath: "/mnt/secrets-store"
            readOnly: true          
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
spec:
  selector:
    app: poi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
