deployments/deployment-trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  labels:
    app: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: poi
        image: registrympx1704.azurecr.io/trips:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
spec:
  selector:
    app: trips
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
