deployments/deployment-tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
  labels:
    app: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registrympx1704.azurecr.io/tripviewer:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
spec:
  selector:
    app: tripviewer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
