deployments/deployment-user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  labels:
    app: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registrympx1704.azurecr.io/user-java:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java-service
spec:
  selector:
    app: user-java
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
