deployments/deployment-userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  labels:
    app: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registrympx1704.azurecr.io/userprofile:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
spec:
  selector:
    app: userprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
